--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -16,7 +16,7 @@
 
 @layer components {
   .container {
-    @apply max-w-[540px] sm:max-w-[720px] md:max-w-[960px] lg:max-w-[1140px];
+    @apply sm:max-w-[614px] md:max-w-[720px] lg:max-w-[960px];
   }
 
   .section-spacing {
